# alac

./: .codeclimate.yml  .dockerignore  Dockerfile  Procfile  README.md  alac.cabal  app.json
app/: Main.hs
src/Alac/: API.hs  Package.hs  PackageIndex.hs
test/Alac/: PackageIndexSpec.hs  PackageSpec.hs
test/fixtures/: erlang.html
