name:                alac
version:             0.1.0.0
synopsis:            Arch Linux Archive Crawler or Cache
description:         Please see README.md
homepage:            http://github.com/pbrisbin/alac#readme
license:             MIT
license-file:        LICENSE
author:              Pat Brisbin
maintainer:          pbrisbin@gmail.com
copyright:           2016 Pat Brisbin
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Alac
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable alac
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , alac
  default-language:    Haskell2010

test-suite alac-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , alac
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pbrisbin/alac
