name:                alac
version:             0.1.0.0
synopsis:            Arch Linux Archive Crawler or Cache
description:         Please see README.md
homepage:            http://github.com/pbrisbin/alac#readme
license:             MIT
license-file:        LICENSE
author:              Pat Brisbin
maintainer:          pbrisbin@gmail.com
copyright:           2016 Pat Brisbin
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Alac.API
                       Alac.Package
                       Alac.PackageIndex
  build-depends:       base             >= 4.7          && < 5
                     , http-conduit     >= 2.1.8        && < 2.2
                     , parsec           >= 3.1.9        && < 3.2
                     , tagsoup          >= 0.13.8       && < 0.14
                     , text             >= 1.2.2.0      && < 1.3
                     , yesod-core       >= 1.4.19       && < 1.5
  default-language:    Haskell2010

executable alac
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , alac
                     , warp >= 3.2.2 && < 3.3
  default-language:    Haskell2010

test-suite alac-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , alac
                     , hspec
                     , QuickCheck
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pbrisbin/alac
